# paperRetrieval

./: .gitignore  LICENSE  README.md  env.sample  pyproject.toml
prototype/: README.md
prototype/backend/: .env.example  app.py  requirements.txt
prototype/backend/venue_profile/: __init__.py  ccf.py
prototype/backend/venue_profile/data/: ccf_venues.json
prototype/frontend/: index.html  package-lock.json  package.json  vite.config.js
prototype/frontend/src/: App.vue
prototype/frontend/src/components/: AgentWorkspace.vue  EvidenceCard.vue  PaperCard.vue
src/scientific_resource_release/: __init__.py  __main__.py  cli.py  models.py
src/scientific_resource_release.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scientific_resource_release/preprocess/: pipeline.py
src/scientific_resource_release/retrieval/: __init__.py  algorithms.py  database.py  embedding.py  ingestion.py  intent.py  keyword.py  schemas.py  service.py
src/scientific_resource_release/semantic_units/: __init__.py  clustering.py  data_loader.py  fact_extraction.py  label_merging.py  llm_client.py  pipeline.py  prompts.py  schemas.py  semantic_unit_synthesis.py
src/scientific_resource_release/utils/: io.py  logging_utils.py  paths.py  semantic_scholar.py
