[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scientific-resource-release"
version = "0.1.0"
description = "Release-ready standalone pipelines for preprocessing, semantic units, retrieval, rerank, and knowledge service"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"openai>=1.40.0",
	"pydantic>=2.0.0",
	"python-dotenv>=1.0.0",
	"rank-bm25>=0.2.2",
	"sentence-transformers>=2.6.0",
	"SQLAlchemy>=2.0.0",
	"pgvector>=0.3.0",
	"psycopg2-binary>=2.9.0",
	"transformers>=4.40.0",
	"torch>=2.0.0",
]

[project.scripts]
sr-release = "scientific_resource_release.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
